Revision history for Mojolicious-Plugin-LinkEmbedder

0.18
       * Fix escaping markup when embedding HTML pages #13
         This includes Github links

0.17     Sun Jan  4 16:54:01 2015
       * Will not run online tests from cpantesters

0.16     Fri Jan  2 14:19:51 2015
       * Add support for xkcd.com image embedding

0.15     Sun Nov 16 14:11:43 2014
       * Fix test containing date
       * Skip tests that require connection to internet

0.14     Thu Nov 13 18:50:15 2014
       * Add support for links from metacpan.org
       * More robust tests

0.13     Wed Oct 22 20:49:23 2014
       * Fix failing video-youtube.t and -vimeo.t

0.12     Sun Oct 19 15:19:41 2014
       * Fix reading media_id in Link::Text::HTML

0.11     Sun Oct 19 13:30:27 2014
       * Fix Video::Dbtv iframe src
       * Fix handling https://www.youtube.com/user/jsconfeu
       * Add support for git.io links
       * Add support for github commit messages
       * Add cache capabilities
       * Remove string overload of Link objects

0.10     Fri Oct 17 14:07:37 2014
       * Add LinkEmbedder::Text::Github
       * Fix embedding Youtube videos over HTTPS
       * Fix embedding Ted videos over HTTPS
       * Change to embedding tweets using javascript

0.09     Sun Oct 12 20:46:49 2014
       * Change link_embedder_text_gist_github_x() javascript methods to public

0.08     Sun Oct 12 19:37:18 2014
       * Add support for scraping information from a HTML page
         - Understands Open Graph and Twitter cards
       * Add support for returning $self from embed_link() helper
       * Add "ua" attribute to ::Link objects
       * Add TO_JSON() method to ::Link objects

0.07     Thu Aug  7 09:14:00 2014
       * Add Imgur support, closes #1 (jberger)

0.06     Tue Jun 10 18:43:30 2014
       * Allow custom stylesheet for Text::GistGithub
       * Add DISCLAIMER section
       * Add COPYRIGHT section

0.05     Tue Jun 10 17:16:41 2014
       * Fix embedding Text::GistGithub
