@@ -5,8 +5,7 @@ plan skip_all => 'TEST_ONLINE=1 need to be set' unless $ENV{TEST_ONLINE};
 
 $t->get_ok('/embed?url=https://twitter.com/jhthorsen/status/434045220116643843')
   ->element_exists(
-  'div.link-embedder.text-twitter > blockquote[class="twitter-tweet"][lang="en"][data-conversation="none"][data-cards="hidden"]'
-  )
+  'div.link-embedder.text-twitter > blockquote[class="twitter-tweet"][lang="en"][data-conversation="none"]')
   ->element_exists(
   'div.link-embedder.text-twitter > blockquote > a[href="https://twitter.com/jhthorsen/status/434045220116643843"]')
   ->element_exists('div.link-embedder.text-twitter > script[src="//platform.twitter.com/widgets.js"]');
